--- a/task3/5/.env
+++ b/task3/5/.env
@@ -1,7 +1,5 @@
 FROM_TASK4_IMAGE=rekusha/devopspractice
 FROM_TASK4_PORTS=8050-8054:80
 JAVA_TASK5=japp
-DB_IMAGE=postgres:11.4-alpine
+DB_IMAGE=postgres
 DB_PORTS=5432:5432
-DB_VOLUMES=./pgdata:/var/lib/postgresql/data/pgdata
-
