--- a/task3/5/docker-compose.yaml
+++ b/task3/5/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     deploy:
       mode: replicated
       replicas: 5
-    links:
+    depends_on:
       - "from_task4"
       - "db"
   db:
