--- a/task3/5/docker-compose.yaml
+++ b/task3/5/docker-compose.yaml
@@ -6,17 +6,21 @@ services:
       - 8050-8054:80
     restart: always
     depends_on:
-      - "db"
+      - db
   java_task5:
     image: ${JAVA_TASK5}
     deploy:
       mode: replicated
       replicas: 5
     depends_on:
-      - "from_task4"
-      - "db"
+      - from_task4
+      - db
   db:
     image: ${DB_IMAGE}
     container_name: postgres
     ports:
       - ${DB_PORTS}
+    environment:
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: docker_test
+      PG_DATA: /var/lib/postgresql/data/pgdata
