--- a/task4/extra/ansible.cfg
+++ b/task4/extra/ansible.cfg
@@ -1,4 +1,7 @@
 [defaults]
+inventory = ./ansible_plugins
 host_key_checking = false
-inventory = ./hosts.txt
-
+pipelining = True
+log_path = /var/log/ansible
+roles_path = ./roles
+forks = 1000
