--- a/task5/docker_install_local.yml
+++ b/task5/docker_install_local.yml
@@ -48,6 +48,7 @@
             - "50000:50000"
         volumes:
             - "/share/jenkins:/var/jenkins_home"
+            - "/var/run/docker.sock:/var/run/docker.sock"
         state: present
         recreate: no
 
