--- a/task5/docker_install_local.yml
+++ b/task5/docker_install_local.yml
@@ -47,8 +47,8 @@
             - "8080:8080"
             - "50000:50000"
         volumes:
-            - "/share/jenkins:/var/jenkins_home"
-            - "/var/run/docker.sock:/var/run/docker.sock"
+            - /share/jenkins:/var/jenkins_home
+            - /var/run/docker.sock:/var/run/docker.sock
         state: present
         recreate: no
 
