--- a/task6/ansible_pb/ansible.cfg
+++ b/task6/ansible_pb/ansible.cfg
@@ -1,3 +1,7 @@
 [defaults]
 inventory = ./hosts.ini
 host_key_checking = false
+pipelining = True
+log_path = /var/log/ansible
+roles_path = ./roles
+forks = 1000
