--- a/task6/extra2/postgres-cluster/files/slave/postgresql.conf
+++ b/task6/extra2/postgres-cluster/files/slave/postgresql.conf
@@ -56,7 +56,7 @@ external_pid_file = '/var/run/postgresql/13-main.pid'			# write an extra PID fil
 
 # - Connection Settings -
 
-listen_addresses = 'localhost, 172.31.7.235'		# what IP address(es) to listen on;
+listen_addresses = 'localhost, 192.168.0.0/24'		# what IP address(es) to listen on;
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
